--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,14 +4,16 @@
     <uses-sdk android:minSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
-        <activity android:name=".ui.ModuleListActivity" android:label="@string/modules"/>
-        <activity android:name=".ui.LectureListActivity" android:label="@string/lecture"/>
+        <activity android:name=".ui.ModuleListActivity" android:label="@string/modules" />
+        <activity android:name=".ui.LectureListActivity" android:label="@string/lecture" />
+        <activity android:name=".ui.TermListActivity" android:label="@string/terms" />
         <activity android:name=".ui.CourseListActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.BaseActivity"/>
         <provider
                 android:name="com.ifmo.LinkedLearning.model.RestProvider"
                 android:authorities="com.ifmo.LinkedLearning.model"
