--- a/project.properties
+++ b/project.properties
@@ -3,3 +3,4 @@
 target=android-17
 android.library.reference.1=deps/DataDroid
 android.library.reference.2=deps/PullToRefresh
+android.library.reference.3=../sdk/extras/android/support/v7/appcompat
