--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,14 @@
         <activity android:name=".ui.LectureListActivity" android:label="@string/lecture" />
         <activity android:name=".ui.TermListActivity" android:label="@string/terms" />
         <activity android:name=".ui.CourseListActivity" android:label="@string/app_name">
+        </activity>
+        <activity android:name=".ui.BaseActivity"/>
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.BaseActivity"/>
         <provider
                 android:name="com.ifmo.LinkedLearning.model.RestProvider"
                 android:authorities="com.ifmo.LinkedLearning.model"
