--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,18 +3,29 @@
           package="com.ifmo.LinkedLearning">
     <uses-sdk android:minSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
+    <application android:icon="@drawable/new_logo" android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
         <activity android:name=".ui.ModuleListActivity" android:label="@string/modules" />
+        <activity android:name=".ui.ModuleActivity" android:label="@string/modules" />
         <activity android:name=".ui.LectureListActivity" android:label="@string/lecture" />
         <activity android:name=".ui.TermListActivity" android:label="@string/terms" />
         <activity android:name=".ui.CourseListActivity" android:label="@string/app_name">
         </activity>
         <activity android:name=".ui.BaseActivity"/>
         <activity android:name=".ui.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <meta-data android:name="android.app.default_searchable"
+                       android:value=".ui.SearchResultsActivity" />
+        </activity>
+        <activity android:name=".ui.SearchResultsActivity" android:label="@string/search_title" android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                       android:resource="@xml/searchable" />
         </activity>
         <provider
                 android:name="com.ifmo.LinkedLearning.model.RestProvider"
