--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ifmo.LinkedLearning">
-    <uses-sdk android:minSdkVersion="17"/>
+          package="com.ifmo.LinkedLearning"
+          android:versionCode="1"
+          android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="15"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -10,6 +12,7 @@
         <activity android:name=".ui.ModuleListActivity" android:label="@string/modules" />
         <activity android:name=".ui.ModuleActivity" android:label="@string/modules" />
         <activity android:name=".ui.LectureListActivity" android:label="@string/lecture" />
+        <activity android:name=".ui.LectureActivity" android:label="@string/lecture" />
         <activity android:name=".ui.TermListActivity" android:label="@string/terms" />
         <activity android:name=".ui.CourseListActivity" android:label="@string/app_name">
         </activity>
